learning polymer, begins skeletoning out basic elements required for project

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -33,5 +33,7 @@
 <link rel="import" href="greeting/greeting.html">
 <link rel="import" href="login/login.html">
 <link rel="import" href="create-user/create-user.html">
+<link rel="import" href="meetup-list/meetup-list.html">
+
 
 
