--- a/app/index.html
+++ b/app/index.html
@@ -109,12 +109,7 @@
 
             <section data-route="meetups">
               <paper-material elevation="1">
-                <h2 class="page-title">Meetups</h2>
-                <p>This is the meetup view section</p>
-                <a href$="{{baseUrl}}meetups/Addy">Addy</a><br>
-                <a href$="{{baseUrl}}meetups/Rob">Rob</a><br>
-                <a href$="{{baseUrl}}meetups/Chuck">Chuck</a><br>
-                <a href$="{{baseUrl}}meetups/Sam">Sam</a>
+                <meetup-list></meetup-list>
               </paper-material>
             </section>
 
