--- a/app/elements/create-user/create-user.html
+++ b/app/elements/create-user/create-user.html
@@ -7,19 +7,20 @@
 <dom-module id="fire-create">
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://meetupdb.firebaseio.com/" provider="password" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
-
-    <paper-slider min="0" max="100" value="30" disabled></paper-slider>
-    <h2 class="page-title">Join us!</h2>
-    <paper-input label="Email" type="email" value="{{email}}"></paper-input>
-    <paper-input label="Create your password" type="password" value="{{password::input}}"></paper-input>
-    <paper-input label="What is your name?" value="{{name}}"></paper-input>
-
-    <paper-button raised on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
-    <paper-button raised on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}"> Login </paper-button>
-
-
     <firebase-document location="https://meetupdb.firebaseio.com/datac" id="firebaseDocument"></firebase-document>
-    <paper-button raised on-tap="createUserHandler">Create</paper-button>
+
+    <paper-slider min="0" max="100" value="30" disabled style="width: 100%;"></paper-slider>
+
+    <h2 class="page-title">Join us!</h2>
+    <paper-input label="What is your name?" value="{{name::input}}"></paper-input>
+    <paper-input label="Email" type="email" value="{{email::input}}"></paper-input>
+    <paper-input label="Create your password" type="password" value="{{password::input}}"></paper-input>
+
+    <h3 class="page-title">Optional</h3>
+    <paper-input label="Who is your employer?" value="{{employer::input}}"></paper-input>
+    <paper-input label="This that this" value="{{employer::input}}"></paper-input>
+
+    <paper-button raised on-tap="createUserHandler" style="width: 100%;">Create</paper-button>
   </template>
 </dom-module>
 
