--- a/app/elements/greeting/greeting.html
+++ b/app/elements/greeting/greeting.html
@@ -4,8 +4,7 @@
 <dom-module id="home-greeting">
   	<template>
 		<h2 class="page-title">Welcome</h2>
-		<p class="subhead">This Meetup Application Includes</p>
-		<my-list></my-list>
+		<p class="subhead">Meetup Planner</p>
 		<p>This was completed utilizing the polymer starter kit in to progress through the udacity senior front end developer course</p>
 	</template>
 	<script>
