--- a/app/elements/login/login.html
+++ b/app/elements/login/login.html
@@ -8,8 +8,8 @@
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://meetupdb.firebaseio.com/" provider="password" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
     <h2 class="page-title">Login</h2>
-    <paper-input label="Email Address" type="email" value="{{email}}"></paper-input>
-    <paper-input label="password" type="password" value="{{password}}"></paper-input>
+    <paper-input label="Email Address" type="email" value="{{email::input}}"></paper-input>
+    <paper-input label="password" type="password" value="{{password::input}}"></paper-input>
 
     <firebase-document location="https://meetupdb.firebaseio.com/datac" id="firebaseDocument"></firebase-document>
     <paper-button raised on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
