nightly commit - removed more unused parts of code - learning more polymer

--- a/app/elements/login/login.html
+++ b/app/elements/login/login.html
@@ -1,22 +1,25 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/firebase-element/firebase-auth.html">
-<link rel="import" href="../../bower_components/firebase-element/firebase-document.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-toast/paper-toast.html">
+
 
 
 <dom-module id="fire-login">
+
   <template>
-    <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://meetupdb.firebaseio.com/" provider="password" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
+    <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" 
+    location="https://meetupdb.firebaseio.com/" provider="password" on-error="errorHandler" on-user-created="userSuccessHandler" params="{{params}}"</firebase-auth>
+
     <h2 class="page-title">Login</h2>
     <paper-input label="Email Address" type="email" value="{{email::input}}"></paper-input>
     <paper-input label="password" type="password" value="{{password::input}}"></paper-input>
-
-    <firebase-document location="https://meetupdb.firebaseio.com/datac" id="firebaseDocument"></firebase-document>
     <paper-button raised on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
     <paper-button raised on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}"> Login </paper-button>
   </template>
 
 </dom-module>
+
 <script>
 (function () { 
   'use strict'
@@ -43,7 +46,8 @@
         notify: true
       },
       uid: {
-        computed: 'returnVal(user.uid)'
+        computed: 'returnVal(user.uid)',
+        notify: true
       },
       owner: {
         computed: 'returnVal(user.owner)'
@@ -65,18 +69,16 @@
         computed: 'computeLogoutHidden(statusKnown, user)'
       }
     },
-
     observers: [
       'emailChanged(email)', 'passwordChanged(password)'
     ],
-
     emailChanged: function(email) {
         //email input has changed, validation can be done here
-        console.log(email);
+        console.log(this.computeLoginStatus(this.statusKnown, this.user));
     },
     passwordChanged: function(password) {
         //password input has changed, validation can be done here
-        console.log(email);
+        console.log(password);
     },
     returnVal: function (val) {
       if (val !== undefined && val !== null) {
@@ -98,38 +100,18 @@
         params.password = this.password
       }
       this.$.firebaseLogin.login(params)
-      this.log('Login')
     },
     logout: function () {
-      this.log('Logout')
       this.$.firebaseLogin.logout()
     },
     errorHandler: function (e) {
       console.log(e)
       console.log(e.detail.message);
-      this.log('Login Status')
       this.message = 'Error: ' + e.detail.message
     },
     userSuccessHandler: function (e) {
       this.message = e.type + ' success!'
-    },
-    createUserHandler: function (e) {
-      this.$.firebaseLogin.createUser(this.email, this.password)
-    },
-    computePasswordHidden: function (provider) {
-      return provider !== 'password'
-    },
-    computeCreateUserDisabled: function (email, password) {
-      return !email || !password
-    },
-    computeChangePasswordDisabled: function (email, password, newPassword) {
-      return !email || !password || !newPassword
-    },
-    computeResetPasswordDisabled: function (email, password) {
-      return !email || !password
-    },
-    computeRemoveUserDisabled: function (email, password) {
-      return !email || !password
+      this.$.toast.open();
     },
     computeLoginHidden: function (statusKnown, user) {
       return !statusKnown || !!user
@@ -138,53 +120,15 @@
       return !statusKnown || !user
     },
     computeLoginStatus: function (statusKnown, user) {
-      var d = new Date()
-      var n = d.getTime()
-      this.log('Login Status')
-      if (statusKnown && user) {
-        return 'Logged in'
-      }
-      if (statusKnown) {
+      if (statusKnown && user) 
+        return 'Logged in'  
+      if (statusKnown) 
         return 'Logged out'
-      }
       return 'Unknown (checking status...)'
     },
-    log: function (log) {
-      var d = new Date()
-      var n = d.getTime()
-      this.$.firebaseDocument.query.ref().push({log: log, time: n, user: this.user})
-    },
     getUserDataUrl: function (uid) {
-      return 'https://hi9site.firebaseio.com/users/' + uid
+      return 'https://meetupdb.firebaseio.com/users/' + uid
     }
   })
-  function clone (obj) {
-    var copy
-    // Handle the 3 simple types, and null or undefined
-    if (obj === null || typeof obj !== 'object') return obj
-    // Handle Date
-    if (obj instanceof Date) {
-      copy = new Date()
-      copy.setTime(obj.getTime())
-      return copy
-    }
-    // Handle Array
-    if (obj instanceof Array) {
-      copy = []
-      for (var i = 0, len = obj.length; i < len; i++) {
-        copy[i] = clone(obj[i])
-      }
-      return copy
-    }
-    // Handle Object
-    if (obj instanceof Object) {
-      copy = {}
-      for (var attr in obj) {
-        if (obj.hasOwnProperty(attr)) copy[attr] = clone(obj[attr])
-      }
-      return copy
-    }
-    throw new Error("Unable to copy obj! Its type isn't supported.")
-  }
 })()
 </script>
