--- a/app/elements/create-user/create-user.html
+++ b/app/elements/create-user/create-user.html
@@ -12,15 +12,16 @@
     <paper-slider min="0" max="100" value="30" disabled style="width: 100%;"></paper-slider>
 
     <h2 class="page-title">Join us!</h2>
-    <paper-input label="What is your name?" value="{{name::input}}"></paper-input>
-    <paper-input label="Email" type="email" value="{{email::input}}"></paper-input>
-    <paper-input label="Create your password" type="password" value="{{password::input}}"></paper-input>
+    <paper-input label="What is your name?" value="{{params.name::input}}"></paper-input>
+    <paper-input label="Email" type="email" value="{{params.email::input}}"></paper-input>
+    <paper-input label="Create your password" type="password" value="{{params.password::input}}"></paper-input>
 
     <h3 class="page-title">Optional</h3>
     <paper-input label="Who is your employer?" value="{{employer::input}}"></paper-input>
     <paper-input label="This that this" value="{{employer::input}}"></paper-input>
 
     <paper-button raised on-tap="createUserHandler" style="width: 100%;">Create</paper-button>
+        <paper-toast id="toast" text="User Created!"></paper-toast>
   </template>
 </dom-module>
 
@@ -33,80 +34,14 @@
     properties: {
       params: {
         type: Object,
-        value: {scope: 'email'}
+        value: {
+          email: '',
+          password: ''
+        }
       },
       provider: {
         type: String, value: 'password'
-      },
-      message: {
-        type: String, value: ''
-      },
-      email: {
-        type: String, value: ''
-      },
-      password: {
-        type: String, value: ''
-      },
-      user: {
-        type: Object, value: null,
-        notify: true
-      },
-      uid: {
-        computed: 'returnVal(user.uid)'
-      },
-      owner: {
-        computed: 'returnVal(user.owner)'
-      },
-      userData: {
-        type: Object, notify: true
-      },
-      userDataUrl: {
-        computed: 'getUserDataUrl(uid)'
-      },
-      ownerDataUrl: {
-        computed: 'getOwnerDataUrl(owner, uid)'
-      },
-      statusKnown: {
-        type: Boolean
-      },
-      show_model: {
-        type: Boolean, notify: true,
-        computed: 'computeLogoutHidden(statusKnown, user)'
-      },
-      role: {
-        computed: 'getRole(user,userData)',
-        notify: true
-      },
-      admin: {
-        computed: 'isAdmin(role)',
-        notify: true
       }
-    },
-    returnVal: function (val) {
-      if (val !== undefined && val !== null) {
-        return val
-      } else {
-        return undefined
-      }
-    },
-    login: function () {
-      var params
-      try {
-        params = JSON.parse(this.params)
-      } catch (e) {
-        params = null
-      }
-      if (this.provider === 'password') {
-        params = params || {}
-        params.email = this.email
-        params.password = this.password
-      }
-      this.$.firebaseLogin.login(params)
-      this.log('Login')
-    },
-    logout: function () {
-      this.log('Logout')
-      this.$.firebaseLogin.logout()
     },
     errorHandler: function (e) {
       this.log('Login Status')
@@ -114,40 +49,19 @@
     },
     userSuccessHandler: function (e) {
       this.message = e.type + ' success!'
+      this.toastHandler("Welcome!");
+    },
+    toastHandler: function (message) {
+        this.$.toast.text=message;
+        this.$.toast.open();
     },
     createUserHandler: function (e) {
-      this.$.firebaseLogin.createUser(this.email, this.password)
-    },
-    changePasswordHandler: function (e) {
-      this.$.firebaseLogin.changePassword(this.email, this.password, this.newPassword)
-    },
-    resetPasswordHandler: function (e) {
-      this.$.firebaseLogin.sendPasswordResetEmail(this.email)
-    },
-    computePasswordHidden: function (provider) {
-      return provider !== 'password'
+      this.$.firebaseLogin.createUser(this.params.email, this.params.password);
     },
     computeCreateUserDisabled: function (email, password) {
       return !email || !password
     },
-    computeChangePasswordDisabled: function (email, password, newPassword) {
-      return !email || !password || !newPassword
-    },
-    computeResetPasswordDisabled: function (email, password) {
-      return !email || !password
-    },
-    computeRemoveUserDisabled: function (email, password) {
-      return !email || !password
-    },
-    computeLoginHidden: function (statusKnown, user) {
-      return !statusKnown || !!user
-    },
-    computeLogoutHidden: function (statusKnown, user) {
-      return !statusKnown || !user
-    },
     computeLoginStatus: function (statusKnown, user) {
-      var d = new Date()
-      var n = d.getTime()
       this.log('Login Status')
       if (statusKnown && user) {
         return 'Logged in'
@@ -162,72 +76,9 @@
       var n = d.getTime()
       this.$.firebaseDocument.query.ref().push({log: log, time: n, user: this.user})
     },
-    getRole: function (user, userData) {
-      if (userData !== undefined && userData !== null && user !== null) {
-        if (this.userSet === undefined && userData.owner === undefined) { // Stops Looping.
-          this.userSet = true
-          if (userData.num === undefined) {
-            userData.num = prompt('Hi ' + user.google.displayName + '\nPlease tell me your mobile phone number?', '07')
-          }
-          if (userData.owner === undefined) {
-            userData.owner = prompt('What is your housing association?', 'Yarlington')
-          }
-          if (userData.email === undefined) {
-            userData.email = prompt('and lastly you email address?', '')
-          }
-          if (userData.log === undefined) {
-            var d = new Date()
-            var n = d.getTime()
-            userData.log = [{first: n}]
-          }
-          userData.user = user
-          this.userData = clone(userData)
-        // this.ownerData = clone(userData)
-        }
-        // user
-        if (!userData.hasOwnProperty('role')) {
-          userData.role = 'User'
-        }
-        this.data = userData
-        return userData.role
-      } else {
-        return 'no data'
-      }
-    },
     getUserDataUrl: function (uid) {
-      return 'https://hi9site.firebaseio.com/users/' + uid
-    },
-    isAdmin: function (role) {
-      return role === 'admin'
+      return 'https://meetupdb.firebaseio.com/users/' + uid
     }
   })
-  function clone (obj) {
-    var copy
-    // Handle the 3 simple types, and null or undefined
-    if (obj === null || typeof obj !== 'object') return obj
-    // Handle Date
-    if (obj instanceof Date) {
-      copy = new Date()
-      copy.setTime(obj.getTime())
-      return copy
-    }
-    // Handle Array
-    if (obj instanceof Array) {
-      copy = []
-      for (var i = 0, len = obj.length; i < len; i++) {
-        copy[i] = clone(obj[i])
-      }
-      return copy
-    }
-    // Handle Object
-    if (obj instanceof Object) {
-      copy = {}
-      for (var attr in obj) {
-        if (obj.hasOwnProperty(attr)) copy[attr] = clone(obj[attr])
-      }
-      return copy
-    }
-    throw new Error("Unable to copy obj! Its type isn't supported.")
-  }
 })()
 </script>
