--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -23,6 +23,8 @@
 
 <!-- Web Components -->
 <link rel="import" href="../bower_components/firebase-element/firebase-auth.html">
+<link rel="import" href="../bower_components/firebase-element/firebase-collection.html">
+<link rel="import" href="../bower_components/firebase-element/firebase-document.html">
 
 <!-- Routing -->
 <link rel="import" href="routing.html">
@@ -34,6 +36,4 @@
 <link rel="import" href="login/login.html">
 <link rel="import" href="create-user/create-user.html">
 <link rel="import" href="meetup-list/meetup-list.html">
-
-
-
+<link rel="import" href="create-meetup/create-meetup.html">
