--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -49,11 +49,11 @@
     });
 
     // 404
-    page('*', function() {
-      app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
-      app.$.toast.show();
-      page.redirect(app.baseUrl);
-    });
+    // page('*', function() {
+    //   app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
+    //   app.$.toast.show();
+    //   page.redirect(app.baseUrl);
+    // });
 
     // add #! before urls
     page({
