--- a/app/elements/create-user/create-user.html
+++ b/app/elements/create-user/create-user.html
@@ -7,8 +7,12 @@
 <dom-module id="fire-create">
   <template>
     <firebase-auth id="firebaseCreateUser" user="{{user}}" status-known="{{statusKnown}}" location="{{config.location}}"
-    provider="password" on-error="errorHandler" on-user-created="userSuccessHandler" params="{{params}}">
+    provider="{{config.provider}}" on-error="errorHandler" on-user-created="userCreated" params="{{params}}">
     </firebase-auth>
+
+    <firebase-document id=firebaseDocument
+      location="https://meetupdb.firebaseio.com/"
+      data="{{userData}}"></firebase-document>
 
     <paper-slider min="0" max="100" value="30" disabled style="width: 100%;"></paper-slider>
 
@@ -44,23 +48,31 @@
         type: Object,
         value: {
           location: 'https://meetupdb.firebaseio.com/',
-          type: 'password'
+          provider: 'password'
         }
+      },
+      user: {
+        type: Object,
+        notify: true
       }
     },
     errorHandler: function (e) {
       this.toastHandler('Error: ' + e.detail.message);
     },
-    userSuccessHandler: function (e) {
-      this.toastHandler("Welcome!");
-      this.$.firebaseDocument.query.ref().push({log: "dsa", time: "dsadsa", user: this.user})
-    },
     toastHandler: function (message) {
         this.$.toast.text=message;
         this.$.toast.open();
     },
+    login: function () {
+      this.$.firebaseLogin.login()
+    },
     createUserHandler: function (e) {
       this.$.firebaseCreateUser.createUser(this.params.email, this.params.password);
+    },
+    userCreated: function (e) {
+      this.$.firebaseCreateUser.login();
+      console.log(this.user);
+      this.$.firebaseDocument.query.ref().push({name: "name", time: "dsadsa", user: this.user})
     },
     computeCreateUserDisabled: function (email, password) {
       return !email || !password
