--- a/app/index.html
+++ b/app/index.html
@@ -84,10 +84,10 @@
             <span on-click="{{login}}">Login</span>
           </a>
 
-          <a data-route="logout" hidden="{{!user}}" href="{{baseUrl}}logout">
+          <!-- <a data-route="logout" hidden="{{!user}}" href="{{baseUrl}}logout">
             <iron-icon icon="account-box"></iron-icon>
             <span>Logout</span>
-          </a>
+          </a> -->
 
           <a data-route="join" hidden="{{user}}" href="{{baseUrl}}join">
             <iron-icon icon="account-box"></iron-icon>
